--- a/pokedex/src/pages/index.astro
+++ b/pokedex/src/pages/index.astro
@@ -1,17 +1,11 @@
 ---
-// Puedes agregar JavaScript aquí si es necesario.
+import Welcome from '../components/Welcome.astro';
+import Layout from '../layouts/Layout.astro';
+
+// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
+// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mi Página con Astro</title>
-</head>
-<body>
-    <header>
-        <h1>Bienvenido a mi página</h1>
-        <p>Este es un sitio creado con Astro y GitHub Pages.</p>
-    </header>
-</body>
-</html>
+
+<Layout>
+	<Welcome />
+</Layout>
